feat: ETA 추가 및 각종 개선사항 반영